--- a/toc.tex
+++ b/toc.tex
@@ -1,12 +1,17 @@
 %% Table of Contents for Source of India Constitution
 %% Can be compiled independently from any directory level
 
-% Path-aware configuration loading
-\@ifundefined{documentclass}{
+% Check if this is being compiled as a standalone document
+\ifx\documentclass\undefined\else
     \documentclass[a4paper,showamendments]{soi}
-    \IfFileExists{config.tex}{\input{config}}{\IfFileExists{../config.tex}{\input{../config}}{\IfFileExists{../../config.tex}{\input{../../config}}{}}}
+    \IfFileExists{config.tex}{\input{config.tex}}{%
+        \IfFileExists{../config.tex}{\input{../config.tex}}{%
+            \IfFileExists{../../config.tex}{\input{../../config.tex}}{}%
+        }%
+    }
     \begin{document}
-}{}
+    \def\soistandalone{true}
+\fi
 
 \clearpage
 \phantomsection
@@ -22,4 +27,4 @@
 
 \clearpage
 
-\@ifundefined{documentclass}{}{\end{document}}
+\ifdefined\soistandalone\end{document}\fi
