--- a/content/parts/part_03.tex
+++ b/content/parts/part_03.tex
@@ -1,47 +1,22 @@
 %% Part III: Fundamental Rights
-%% Can be compiled independently from any directory level
-
-% Check if this is being compiled as a standalone document
-\ifx\documentclass\undefined\else
-    \documentclass[a4paper,showamendments]{soi}
-    \IfFileExists{config.tex}{\input{config.tex}}{%
-        \IfFileExists{../config.tex}{\input{../config.tex}}{%
-            \IfFileExists{../../config.tex}{\input{../../config.tex}}{}%
-        }%
-    }
-    \begin{document}
-    \def\soistandalone{true}
-\fi
 
 \soiPart{III}{FUNDAMENTAL RIGHTS}
 
-% General provisions - Path-aware article inclusion
-\IfFileExists{../articles/article_014.tex}{\input{../articles/article_014.tex}}{%
-    \IfFileExists{articles/article_014.tex}{\input{articles/article_014.tex}}{%
-        \IfFileExists{content/articles/article_014.tex}{\input{content/articles/article_014.tex}}{%
-            \ClassWarning{soi}{Cannot find article_014.tex}%
-        }%
-    }%
-}
+% Chapter: Right to Equality
+\soiChapter{Right to Equality}
+\input{content/articles/article_014}
+\input{content/articles/article_015}
+% Note: Articles 16, 17, 18 would also be included here
 
-\IfFileExists{../articles/article_015.tex}{\input{../articles/article_015.tex}}{%
-    \IfFileExists{articles/article_015.tex}{\input{articles/article_015.tex}}{%
-        \IfFileExists{content/articles/article_015.tex}{\input{content/articles/article_015.tex}}{%
-            \ClassWarning{soi}{Cannot find article_015.tex}%
-        }%
-    }%
-}
+% Chapter: Right to Freedom  
+% \soiChapter{Right to Freedom}
+% \input{content/articles/article_019}
+% \input{content/articles/article_020}
+\input{content/articles/article_021a}
+% \input{content/articles/article_022}
 
-% Right to life and personal liberty
-\IfFileExists{../articles/article_021a.tex}{\input{../articles/article_021a.tex}}{%
-    \IfFileExists{articles/article_021a.tex}{\input{articles/article_021a.tex}}{%
-        \IfFileExists{content/articles/article_021a.tex}{\input{content/articles/article_021a.tex}}{%
-            \ClassWarning{soi}{Cannot find article_021a.tex}%
-        }%
-    }%
-}
-
-% Note: Additional articles would be included here
-% Articles 12, 13, 16-20, 21, 22-32 etc.
-
-\ifdefined\soistandalone\end{document}\fi
+% Note: Additional chapters would be included here:
+% Right against Exploitation (Articles 23-24)
+% Right to Freedom of Religion (Articles 25-28)  
+% Cultural and Educational Rights (Articles 29-30)
+% Right to Constitutional Remedies (Articles 32-35)
